# pdfium-android

./: settings.gradle  settings.gradle.kts
app/: build.gradle
app/src/androidTest/java/com/dargoz/pdfium/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dargoz/pdfium/android/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dargoz/pdfium/android/: ExampleUnitTest.java
core/: build.gradle
core/src/androidTest/java/com/dargoz/pdfium/core/: ExampleInstrumentedTest.java
core/src/main/cpp/: CMakeLists.txt  native-lib.cpp  util.hpp
core/src/main/cpp/include/: fpdf_deleters.h  fpdf_scopers.h
core/src/main/cpp/include/utils/: Mutex.h
core/src/main/java/com/dargoz/pdfium/core/: PdfDocument.java  PdfPasswordException.java  PdfiumCore.java
core/src/main/java/com/dargoz/pdfium/core/utils/: Size.java  SizeF.java
core/src/test/java/com/dargoz/pdfium/core/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
